index file modified (debugged)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>This is local repository.</p>
-    <p>this is in the feature1 branch.</p>
+    <p>this is in the main branch.</p>
 </body>
 </html>
