--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>This is local repository.</p>
     <p>this is in the main branch.</p>
+    <button>Click here</button>
 </body>
 </html>
