--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <p>This is local repository.</p>
-    <p>this is in the main branch.</p>
-    <button>Click</button>
+    <p>this is in the main branch.(main)</p>
 </body>
 </html>
